merge fabric fixes